<resources>
    <string name="app_name" translatable="false">Nextiva Mobile</string>
    <string name="placeholder_api_url" translatable="false">https://www.nextiva.com</string>
    <string name="app_environment" translatable="false">@string/environment_prod</string>
    <string name="environment_dev" translatable="false">dev</string>
    <string name="environment_labs" translatable="false">labs</string>
    <string name="environment_nightly" translatable="false">nightly</string>
    <string name="environment_qa" translatable="false">qa</string>
    <string name="environment_alpha" translatable="false">alpha</string>
    <string name="environment_rc" translatable="false">rc</string>
    <string name="environment_prod" translatable="false">prod</string>
    <string name="environment_prodBeta" translatable="false">prodBeta</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_cancel" translatable="false">@android:string/cancel</string>
    <string name="general_ok" translatable="false">@android:string/ok</string>
    <string name="general_okay">Okay</string>
    <string name="general_on">On</string>
    <string name="general_off">Off</string>
    <string name="general_delete">Delete</string>
    <string name="general_help">Help</string>
    <string name="general_revert">Revert</string>
    <string name="general_save">Save</string>
    <string name="general_add">Add</string>
    <string name="general_loading">Loading…</string>
    <string name="general_today">Today</string>
    <string name="general_status_automatic">Automatic</string>
    <string name="general_status_available">Available</string>
    <string name="general_status_mobile">Mobile</string>
    <string name="general_status_away">Away</string>
    <string name="general_status_busy">Busy</string>
    <string name="general_status_do_not_disturb">Do not disturb</string>
    <string name="general_status_call">Call</string>
    <string name="general_status_offline">Offline</string>
    <string name="general_status_pending">Pending</string>
    <string name="general_im_address_type">IM Address</string>
    <string name="general_contact">Contact</string>
    <string name="general_unavailable">Unavailable</string>
    <string name="general_copied_to_clipboard">Copied to Clipboard</string>
    <string name="general_copied_to_clipboard_label">%1$s for %2$s</string>
    <string name="general_chat_message_copied_to_clipboard_label">Chat Message with %1$s</string>
    <string name="general_multiple_locations">Multiple Locations</string>
    <string name="general_settings">Settings</string>
    <string name="general_tab_max_limit">99+</string>
    <string name="general_discard">Discard</string>
    <string name="general_enabled">Enabled</string>
    <string name="general_disabled">Disabled</string>
    <string name="general_start">Start</string>
    <string name="general_select">Select</string>
    <string name="general_maybe_later">Maybe later</string>
    <string name="general_import_all">Import all</string>
    <string name="general_try_again">Try again</string>
    <string name="general_import">Import</string>
    <string name="general_unknown">(unknown)</string>
    <string name="general_headset">Headset</string>
    <string name="general_draft">Draft</string>
    <string name="general_created_by">Created by:</string>
    <string name="general_last_modified_by">Last modified by:</string>
    <string name="general_name_with_self_indicator">%1$s (You)</string>
    <string name="general_copy">Copy</string>
    <string name="general_change">Change</string>
    <string name="general_close_list">Close list</string>
    <string name="date_format_short_time_12_hour">h:mm a</string>
    <string name="date_format_short_month_day_year">M/d/yy</string>
    <string name="date_format_short_day_of_week_month_day_time">E, MMMM d, h:mm a</string>
    <string name="main_nav_call_settings">Call Settings</string>
    <string name="main_nav_preferences">Preferences</string>
    <string name="main_nav_notifications">Notifications</string>
    <string name="main_nav_about">About</string>
    <string name="main_nav_help">Help</string>
    <string name="main_nav_sign_out">Sign Out</string>
    <string name="app_preference_troubleshooting">Troubleshooting</string>
    <string name="app_preference_enable_logging">Enable Logging</string>
    <string name="app_preference_file_logging">File Logging</string>
    <string name="app_preference_xmpp_logging">XMPP Logging</string>
    <string name="app_preference_sip_logging">SIP Logging</string>
    <string name="app_preference_email_logs">Email Logs to Support</string>
    <string name="app_preference_health_check">Health Check</string>
    <string name="app_preference_license_check">License Check</string>
    <string name="app_preference_feature_flags">Feature Flags</string>
    <string name="app_preferences_sip_configuration">SIP</string>
    <string name="app_preference_video_conference">Video Conference</string>
    <string name="app_preference_font_awesome_utility">Font Awesome Utility</string>
    <string name="app_preference_design_system_utility">Design System Utility</string>
    <string name="app_preference_reset_local_contacts_dialog_shown">Connect Reset Local Contacts Dialog Shown</string>
    <string name="app_preference_database_count_utility">Database Record Counts</string>
    <string name="app_preference_clear_logs">Clear All Logs</string>
    <string name="app_preferences_key_troubleshooting" translatable="false">troubleshooting</string>
    <string name="app_preferences_key_qa" translatable="false">qa</string>
    <string name="app_preferences_key_enable_logging" translatable="false">enable_logging</string>
    <string name="app_preferences_key_file_logging" translatable="false">file_logging</string>
    <string name="app_preferences_key_xmpp_logging" translatable="false">xmpp_logging</string>
    <string name="app_preferences_key_sip_logging" translatable="false">sip_logging</string>
    <string name="app_preferences_key_email_logs" translatable="false">email_logs</string>
    <string name="app_preferences_key_clear_logs" translatable="false">clear_logs</string>
    <string name="app_preferences_key_health_check" translatable="false">health_check</string>
    <string name="app_preferences_key_license_check" translatable="false">License Check</string>
    <string name="app_preferences_key_feature_flags" translatable="false">feature_flags</string>
    <string name="app_preferences_key_sip_configuration" translatable="false">sip_configuration</string>
    <string name="app_preferences_key_font_awesome_utility" translatable="false">font_awesome_utility</string>
    <string name="app_preferences_key_design_system_utility" translatable="false">design_system_utility</string>
    <string name="app_preferences_key_reset_local_contacts_dialog_shown" translatable="false">reset_local_contacts_dialog_shown</string>
    <string name="app_preferences_key_database_count_utility" translatable="false">database_count_utility</string>
    <string name="app_preference_qa">QA</string>
    <string name="app_preference_expire_contact_cache">Expire Contact Cache</string>
    <string name="app_preferences_key_expire_contact_cache" translatable="false">expire_contact_cache</string>
    <string name="app_preferences_key_video_conference" translatable="false">video_screen</string>
    <string name="app_preferences_crash_the_app">Crash App?</string>
    <string name="app_preferences_key_crash_the_app" translatable="false">crash_app</string>
    <string name="app_preferences_generate_logs">Generate Logs</string>
    <string name="app_preferences_key_generate_logs" translatable="false">generate_logs</string>
    <string name="app_preferences_display_audio_video_statistics">Display Audio/Video Statistics</string>
    <string name="app_preferences_key_audio_video_stats" translatable="false">audio_video_stats</string>
    <string name="app_preferences_key_new_active_call_layout" translatable="false">new_active_call_layout</string>
    <string name="app_preferences_display_sip_state">SIP State</string>
    <string name="app_preferences_display_sip_error">SIP Error</string>
    <string name="app_preferences_key_sip_state" translatable="false">sip_state</string>
    <string name="app_preferences_key_sip_error" translatable="false">sip_error</string>
    <string name="app_preferences_device_policy">Device Policy</string>
    <string name="app_preferences_key_device_policy" translatable="false">device_policy</string>
    <string name="app_preferences_message_count_api">Message Count API</string>
    <string name="app_preferences_key_message_count_api" translatable="false">message_count_api</string>
    <string name="app_preferences_logout_token">Logout Token</string>
    <string name="app_preferences_key_logout_token" translatable="false">logout_token</string>
    <string name="app_preferences_clear_token">Clear Token</string>
    <string name="app_preferences_key_clear_token" translatable="false">clear_token</string>
    <string name="app_preferences_delete_sms">Delete Sms Messages</string>
    <string name="app_preferences_key_delete_sms" translatable="false">delete_sms_messages</string>
    <string name="app_preferences_enable_old_active_call_screen_layout">Enable old active call layout</string>
    <string name="app_preference_sip">Audio</string>
    <string name="app_preference_key_echo_cancellation">echo_cancellation</string>
    <string name="app_preference_echo_cancellation">Acoustic Echo Cancellation</string>
    <string name="app_preferences_key_set_ringtone">set_ringtone</string>
    <string name="app_preference_ringtone">Ringtone</string>
    <string name="app_preferences_key_set_sms_tone">set_notifications_tone</string>
    <string name="app_preference_sms">SMS</string>
    <string name="app_preference_user_preferences">User Preferences</string>
    <string name="app_preference_key_show_confirm_dialog_to_delete">show_confirm_dialog_to_delete</string>
    <string name="app_preference_show_confirm_dialog_to_delete">Show confirm dialog on delete</string>
    <string name="app_preference_key_enable_swipe_actions">enable_swipe_actions_sms</string>
    <string name="app_preference_enable_swipe_actions">Enable swipe actions</string>
    <string name="app_preference_message_count_voice">Voice Count: %s</string>
    <string name="app_preference_message_count_voicemail">Voicemail Count: %s</string>
    <string name="app_preference_message_count_sms">SMS Count: %s</string>
    <string name="app_preference_message_count_chat">Chat Count: %s</string>
    <string name="app_preference_message_count_email">Email Count: %s</string>
    <string name="app_preference_message_count_survey">Survey Count: %s</string>
    <string name="app_preference_message_count_meeting">Meeting Count: %s</string>
    <string name="login_preference_this_phone_number">This Mobile Phone Number</string>
    <string name="login_preference_about">About</string>
    <string name="login_preference_help">Help</string>
    <string name="login_preferences_key_troubleshooting">troubleshooting</string>
    <string name="login_preferences_key_this_phone_number" translatable="false">this_phone_number</string>
    <string name="login_preferences_key_about">about</string>
    <string name="login_preferences_key_help">help</string>
    <string name="connect_contacts_search_no_results_title">No results found</string>
    <string name="connect_contacts_search_no_results_message">Try searching by a different keyword</string>
    <string name="meeting_meetings_header">Upcoming meetings</string>
    <string name="connect_meeting_list_no_results_empty_state_view_message_text">You don\'t have any meetings activity.</string>
    <string name="connect_meeting_list_no_results_empty_state_view_title_text">No meetings to show</string>
</resources>