<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:id="@+id/preferences_preference_category_qa"
        android:key="@string/app_preferences_key_qa"
        android:title="@string/app_preference_qa">

        <Preference
            android:id="@+id/preferences_preference_reset_local_contacts_dialog_shown"
            android:key="@string/app_preferences_key_reset_local_contacts_dialog_shown"
            android:title="@string/app_preference_reset_local_contacts_dialog_shown" />

        <Preference
            android:id="@+id/preferences_preference_video_conference"
            android:key="@string/app_preferences_key_video_conference"
            android:title="@string/app_preference_video_conference" />

        <Preference
            android:id="@+id/preferences_preference_font_awesome_utility"
            android:key="@string/app_preferences_key_font_awesome_utility"
            android:title="@string/app_preference_font_awesome_utility" />

        <Preference
            android:id="@+id/preferences_preference_design_system_utility"
            android:key="@string/app_preferences_key_design_system_utility"
            android:title="@string/app_preference_design_system_utility" />

        <Preference
            android:id="@+id/preferences_preference_database_count_utility"
            android:key="@string/app_preferences_key_database_count_utility"
            android:title="@string/app_preference_database_count_utility"/>

        <Preference
            android:id="@+id/preferences_preference_device_policy"
            android:key="@string/app_preferences_key_device_policy"
            android:title="@string/app_preferences_device_policy"/>

        <Preference
            android:id="@+id/preferences_preference_expire_contact_cache"
            android:key="@string/app_preferences_key_expire_contact_cache"
            android:title="@string/app_preference_expire_contact_cache" />

        <Preference
            android:id="@+id/preferences_preference_crash_app"
            android:key="@string/app_preferences_key_crash_the_app"
            android:title="@string/app_preferences_crash_the_app" />

        <Preference
            android:id="@+id/preferences_preference_generate_logs"
            android:key="@string/app_preferences_key_generate_logs"
            android:title="@string/app_preferences_generate_logs" />

        <Preference
            android:id="@+id/preferences_preference_message_count_api"
            android:key="@string/app_preferences_key_message_count_api"
            android:title="@string/app_preferences_message_count_api" />

        <Preference
            android:id="@+id/preferences_preference_logout_token"
            android:key="@string/app_preferences_key_logout_token"
            android:title="@string/app_preferences_logout_token" />

        <Preference
            android:id="@+id/preferences_preference_clear_token"
            android:key="@string/app_preferences_key_clear_token"
            android:title="@string/app_preferences_clear_token" />

        <Preference
            android:id="@+id/preferences_preference_delete_sms"
            android:key="@string/app_preferences_key_delete_sms"
            android:title="@string/app_preferences_delete_sms"/>

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_check_box_preference_audio_video_stats"
            android:defaultValue="false"
            android:key="@string/app_preferences_key_audio_video_stats"
            android:title="@string/app_preferences_display_audio_video_statistics"
            android:contentDescription="@string/preferences_check_box_preference_display_audio_video_statistics_content_description" />

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_check_box_preference_new_active_call_layout"
            android:defaultValue="false"
            android:key="@string/app_preferences_key_new_active_call_layout"
            android:title="@string/app_preferences_enable_old_active_call_screen_layout"
            android:contentDescription="@string/preferences_check_box_preference_enable_old_active_call_layout_content_description" />

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_check_box_preference_sip_state"
            android:defaultValue="false"
            android:key="@string/app_preferences_key_sip_state"
            android:title="@string/app_preferences_display_sip_state"
            android:contentDescription="@string/preferences_check_box_preference_display_SIP_states_content_description" />

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_check_box_preference_sip_error"
            android:defaultValue="false"
            android:key="@string/app_preferences_key_sip_error"
            android:title="@string/app_preferences_display_sip_error"
            android:contentDescription="@string/preferences_check_box_preference_display_SIP_error_content_description" />

    </PreferenceCategory>
</PreferenceScreen>