<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/preferences_layout">

    <PreferenceCategory
        android:id="@+id/preferences_preference_category_troubleshooting"
        android:key="@string/app_preferences_key_troubleshooting"
        android:title="@string/app_preference_troubleshooting">

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_check_box_preference_enable_logging"
            android:defaultValue="false"
            android:key="@string/app_preferences_key_enable_logging"
            android:title="@string/app_preference_enable_logging"
            app:contentDescription="@string/preferences_check_box_preference_enable_logging_content_description" />

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_check_box_preference_file_logging"
            android:defaultValue="false"
            android:key="@string/app_preferences_key_file_logging"
            android:title="@string/app_preference_file_logging"
            app:contentDescription="@string/preferences_check_box_preference_file_logging_content_description" />

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_check_box_preference_sip_logging"
            android:defaultValue="false"
            android:key="@string/app_preferences_key_sip_logging"
            android:title="@string/app_preference_sip_logging"
            app:contentDescription="@string/preferences_check_box_preference_sip_logging_content_description" />

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_check_box_preference_xmpp_logging"
            android:defaultValue="false"
            android:key="@string/app_preferences_key_xmpp_logging"
            android:title="@string/app_preference_xmpp_logging"
            app:contentDescription="@string/preferences_check_box_preference_xmpp_logging_content_description" />

        <!--<CheckBoxPreference-->
        <!--android:id="@+id/preferences_check_box_preference_other_logging"-->
        <!--android:defaultValue="false"-->
        <!--android:key="@string/app_preferences_key_other_logging"-->
        <!--android:title="@string/app_preference_other_logging" />-->

        <!--<CheckBoxPreference-->
        <!--android:id="@+id/preferences_check_box_preference_crash_reporting"-->
        <!--android:defaultValue="false"-->
        <!--android:key="@string/app_preferences_key_crash_reporting"-->
        <!--android:title="@string/app_preference_crash_reporting" />-->

        <!--<CheckBoxPreference-->
        <!--android:id="@+id/preferences_check_box_preference_diagnostic_info"-->
        <!--android:defaultValue="false"-->
        <!--android:key="@string/app_preferences_key_diagnostic_info"-->
        <!--android:summary="@string/app_preference_diagnostic_info_summary"-->
        <!--android:title="@string/app_preference_diagnostic_info" />-->

        <Preference
            android:id="@+id/preferences_preference_email_logs"
            android:key="@string/app_preferences_key_email_logs"
            android:title="@string/app_preference_email_logs" />

        <Preference
            android:id="@+id/preferences_preference_clear_logs"
            android:key="@string/app_preferences_key_clear_logs"
            android:title="@string/app_preference_clear_logs" />

        <Preference
            android:id="@+id/preferences_preference_health_check"
            android:key="@string/app_preferences_key_health_check"
            android:title="@string/app_preference_health_check" />

        <Preference
            android:id="@+id/preferences_preference_license_check"
            android:key="@string/app_preferences_key_license_check"
            android:title="@string/app_preference_license_check" />

        <Preference
            android:id="@+id/preferences_preference_feature_flags"
            android:key="@string/app_preferences_key_feature_flags"
            android:title="@string/app_preference_feature_flags" />

        <Preference
            android:id="@+id/preferences_preference_sip_configuration"
            android:key="@string/app_preferences_key_sip_configuration"
            android:title="@string/app_preferences_sip_configuration" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>