<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:id="@+id/preferences_preference_category_sip"
        android:title="@string/app_preference_sip">

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_sip_echo_cancellation"
            android:defaultValue="false"
            android:key="@string/app_preference_key_echo_cancellation"
            android:title="@string/app_preference_echo_cancellation"
            android:contentDescription="@string/preferences_check_box_preference_echo_cancellation_content_description" />

        <Preference
            android:id="@+id/preferences_sip_set_ringtone"
            android:key="@string/app_preferences_key_set_ringtone"
            android:title="@string/app_preference_ringtone"/>

        <Preference
            android:id="@+id/preferences_sip_set_notifications_tone"
            android:key="@string/app_preferences_key_set_sms_tone"
            android:title="@string/app_preference_sms"/>

    </PreferenceCategory>
</PreferenceScreen>
