<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_menu_menu">

    <item
        android:id="@+id/main_nav_call_settings"
        android:icon="@drawable/ic_call_settings"
        android:title="@string/main_nav_call_settings" />
    <item
        android:id="@+id/main_nav_preferences"
        android:icon="@drawable/ic_settings"
        android:title="@string/main_nav_preferences" />
    <item
        android:id="@+id/main_nav_notifications"
        android:icon="@drawable/ic_call_settings"
        android:title="@string/main_nav_notifications" />
    <item
        android:id="@+id/main_nav_about"
        android:icon="@drawable/ic_info"
        android:title="@string/main_nav_about" />
    <item
        android:id="@+id/main_nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/main_nav_help" />
    <group
        android:id="@+id/sign_out_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/main_nav_sign_out"
            android:icon="@drawable/ic_exit_from_app"
            android:title="@string/main_nav_sign_out" />
    </group>

</menu>