<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:id="@+id/preferences_preference_category_sms"
        android:title="@string/app_preference_user_preferences">

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_sms_show_confirmation_dialog"
            android:defaultValue="true"
            android:key="@string/app_preference_key_show_confirm_dialog_to_delete"
            android:title="@string/app_preference_show_confirm_dialog_to_delete"
            android:contentDescription="@string/preferences_check_box_preference_show_dialog_content_description" />

        <com.nextiva.nextivaapp.android.view.CheckBoxPreferenceWithContentDescription
            android:id="@+id/preferences_enable_swipe_actions_sms"
            android:defaultValue="true"
            android:key="@string/app_preference_key_enable_swipe_actions"
            android:title="@string/app_preference_enable_swipe_actions"
            android:contentDescription="@string/preferences_check_box_preference_enable_swipe_actions" />

    </PreferenceCategory>
</PreferenceScreen>
